After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664582 - lookingGlass: Fix global key press handler
lookingGlass: Fix global key press handler
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-11-22 18:32 UTC by Florian Müllner
Modified: 2011-12-01 18:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
lookingGlass: Fix global key press handler (1.26 KB, patch)
2011-11-22 18:32 UTC, Florian Müllner
committed Details | Review
main: Fix keyboard event emission for non-reactive actors (885 bytes, patch)
2011-11-26 10:16 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Florian Müllner 2011-11-22 18:32:13 UTC
Some Clutter update broke this recently - not sure why it used to work.
Comment 1 Florian Müllner 2011-11-22 18:32:16 UTC
Created attachment 201945 [details] [review]
lookingGlass: Fix global key press handler

No idea why connecting a key-press-event to a non-reactive actor
used to work, but some Clutter update broke it. Obvious fix is
to make the actor reactive.
Comment 2 Jasper St. Pierre (not reading bugmail) 2011-11-22 21:10:08 UTC
Review of attachment 201945 [details] [review]:

Sure.
Comment 3 Florian Müllner 2011-11-22 21:38:02 UTC
Attachment 201945 [details] pushed as c3528f5 - lookingGlass: Fix global key press handler
Comment 4 Jasper St. Pierre (not reading bugmail) 2011-11-26 10:16:53 UTC
Created attachment 202173 [details] [review]
main: Fix keyboard event emission for non-reactive actors

This is an innocent copy-paste issue that ended up breaking a few things
Comment 5 Emmanuele Bassi (:ebassi) 2011-12-01 05:29:24 UTC
Review of attachment 202173 [details] [review]:

looks good, but the whole logic is busted, so I'll need a "FIXME: 2.0:" reminder to fix the idiocy of having key events behave differently than pointer events.
Comment 6 Jasper St. Pierre (not reading bugmail) 2011-12-01 18:05:43 UTC
Attachment 202173 [details] pushed as f7bb1e8 - main: Fix keyboard event emission for non-reactive actors