main: Fix keyboard event emission for non-reactive actors

This is an innocent copy-paste issue that ended up breaking a few things

https://bugzilla.gnome.org/show_bug.cgi?id=664582